@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.0b3
 -------------------
 
+5/5/10
+    - Added RETURN_RAW_DER option to control when OPF solver returns
+      constraint, Jacobian and objective function gradient and Hessian
+      information.
+
 5/4/10
     - Refactored portions of opf() into opf_setup() and opf_execute().
 
